Fixed button overlap issue in masthead of narrow view

--- a/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default-narrow.css
+++ b/sites/all/themes/dvcacomega/css/dvcacomega-alpha-default-narrow.css
@@ -7,6 +7,7 @@
  }
  #block-boxes-upper-help-box {
   margin:0;
+  float: right;
  }
  .zone-user-wrapper .menu a {
   padding: 0 20px;
